fix: add color to heading-store for improved visibility

--- a/css/sample-work.css
+++ b/css/sample-work.css
@@ -142,6 +142,7 @@ h1 {
 .heading-store {
     display: flex;
     justify-content: center;
+    color: var(--color-heading)
 }
 
 .heading-4 a {
